MCR-3235 Enable PMD rule SystemPrintln (#2390)
* MCR-3235 Enable PMD rule SystemPrintln

* MCR-3235 fix guard log statement

* MCR-3235 use System.println in MCRConfigurationDirSetup

* MCR-3235 use LOGGER/println instead of StatusLogger